[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "szl-recall"
version = "0.4.0"
description = "EU AI Act Article 12 compliant agent audit infrastructure — with persistent memory built in."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sentient Zero Labs" }]
requires-python = ">=3.11"
keywords = ["ai", "agents", "memory", "mcp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastmcp>=3.1",
    "aiosqlite>=0.20",
    "anthropic>=0.40.0",
    "rank-bm25>=0.2",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
export = [
    "aioboto3>=12.0",
]
postgres = [
    "asyncpg>=0.29",
    "pgvector>=0.3",
]
embeddings = [
    "sentence-transformers>=3.0",
    "torch>=2.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
recall = "recall.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/recall"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 88
target-version = "py311"
